Convert to GDScript

--- a/plugin.cfg
+++ b/plugin.cfg
@@ -1,7 +1,7 @@
 [plugin]
 
 name="Trail3D"
-description="3D Immediate Trails using C#"
-author="Barji"
+description="3D Immediate Trails"
+author="Barji, ERmilburn02"
 version="1.0.0"
-script="TrailPlugin.cs"
+script="TrailPlugin.gd"
